// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the button as active 1`] = `
<button
  class="Button Button--primary Button--medium Button--is-active"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Active button
    </span>
  </span>
</button>
`;

exports[`renders the button as link 1`] = `
<a
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  href="/"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Button link
    </span>
  </span>
</a>
`;

exports[`renders the component 1`] = `
<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as naked 1`] = `
<button
  class="Button Button--naked Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component as primary 1`] = `
<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component disabled 1`] = `
<button
  class="Button Button--primary Button--disabled Button--medium"
  data-test-id="cf-ui-button"
  disabled=""
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component full width 1`] = `
<button
  class="Button Button--primary Button--medium Button--full-width"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component in loading state 1`] = `
<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Spinner Button__spinner Spinner--default Spinner--white"
      data-test-id="cf-ui-spinner"
      style="height: 18px; width: 18px;"
      viewBox="0 0 60 51"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title>
        Loading…
      </title>
      <g
        class="circle1--translate"
        transform="translate(10,33.528168)"
      >
        <g
          class="circle1--scale"
        >
          <circle
            id="circle1"
            r="6"
            transform="translate(0,10.471832)"
          />
        </g>
      </g>
      <g
        class="circle2--translate"
        transform="translate(30,33.528168)"
      >
        <g
          class="circle2--scale"
        >
          <circle
            id="circle2"
            r="6"
            transform="translate(0,10.471832)"
          />
        </g>
      </g>
      <g
        class="circle3--translate"
        transform="translate(50,33.528168)"
      >
        <g
          class="circle3--scale"
        >
          <circle
            id="circle3"
            r="6"
            transform="translate(0,10.471832)"
          />
        </g>
      </g>
    </svg>
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component with an additional class name 1`] = `
<button
  class="Button my-extra-class Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;

exports[`renders the component with dropdown indicator 1`] = `
<button
  class="Button Button--primary Button--medium Button--is-dropdown"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <span
      class="Button__label"
    >
      Embed Entry
    </span>
    <svg
      class="Icon Icon--small Icon--white Button__dropdown-icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </span>
</button>
`;

exports[`renders the component with icon 1`] = `
<button
  class="Button Button--primary Button--medium"
  data-test-id="cf-ui-button"
  type="button"
>
  <span
    class="TabFocusTrap Button__inner-wrapper"
    tabindex="-1"
  >
    <svg
      class="Icon Icon--small Icon--white Button__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M14.0303 11.7803C13.7374 12.0732 13.2626 12.0732 12.9697 11.7803L9 7.81066L5.03033 11.7803C4.73744 12.0732 4.26257 12.0732 3.96967 11.7803C3.67678 11.4874 3.67678 11.0126 3.96967 10.7197L8.46967 6.21967C8.76257 5.92678 9.23744 5.92678 9.53033 6.21967L14.0303 10.7197C14.3232 11.0126 14.3232 11.4874 14.0303 11.7803Z"
      />
    </svg>
    <span
      class="Button__label"
    >
      Embed entry
    </span>
  </span>
</button>
`;
